--- a/MavenReportWithEmail/pom.xml
+++ b/MavenReportWithEmail/pom.xml
@@ -60,7 +60,66 @@
 					</suiteXmlFiles>
 				</configuration>
 			</plugin>
-		</plugins>
+ 
+	<!-- Post-Man plugin -->
+		 <plugin>
+			<groupId>ch.fortysix</groupId>
+			<artifactId>maven-postman-plugin</artifactId>
+			<executions>
+				<execution>
+				
+				<id>send a mail</id>
+				<phase>test</phase>
+				<goals>
+				<goal>send-mail</goal>
+				</goals>
+				<inherited>true</inherited>
+				
+				<configuration>
+					<!-- From Email address -->
+					<from>kunal.dhote7799@gmail.com</from>
+					
+					<!--  Email subject -->
+					<subject>Test Automation Report</subject>
+					
+					<!-- Fail the build if the mail doesnt reach -->
+					<failonerror>true</failonerror>
+					
+					<!-- host -->
+					<mailhost>smtp.gmail.com</mailhost>
+					<!-- port of the host -->
+					<mailport>465</mailport>
+					<mailssl>true</mailssl>
+					<mailAltConfig>true</mailAltConfig>
+					
+					<!-- Email Authentication(USername and Password) -->
+					<mailuser>from enter email</mailuser>
+					<mailpassword>Enter your password</mailpassword>
+					
+					<receivers>
+						<!-- To Email address -->
+						<receiver>To Email</receiver>
+					</receivers>
+					
+					<fileSets>
+					<fileSet>
+						<!-- Report directory Path -->
+						<directory>C:\Users\dkunal\GitRepo\.git\MavenReportWithEmail</directory>
+						<includes>
+							<!-- Report file name -->
+							<include>extent.html</include>
+						</includes>
+						<!-- Use Regular Expressions like **/*.html if you want all the html files to send-->
+						</fileSet>
+					</fileSets>				
+				
+				</configuration>
+				</execution>
+			</executions>
+		</plugin>
+
+</plugins>
+
 </build>
   
   
